--- a/build.gradle
+++ b/build.gradle
@@ -9,18 +9,14 @@ version = '0.0.1-SNAPSHOT'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(23)
-	}
-}
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
+		languageVersion = JavaLanguageVersion.of(21)
 	}
 }
 
 repositories {
 	mavenCentral()
+	// Přidáváme JCenter pro starší knihovny, pokud Maven Central nenajde závislosti
+	jcenter()
 }
 
 dependencies {
@@ -40,14 +36,14 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-	// Swagger using Springdoc OpenAPI
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
+	// Swagger using Springdoc OpenAPI - update to a compatible version
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
-	// JAXB API
-	implementation 'javax.xml.bind:jaxb-api:2.3.1'
-	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
+
+	// JAXB API - změna na dostupnou verzi
+	implementation 'javax.xml.bind:jaxb-api:2.3.0'
+	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
 }
-
 
 tasks.named('test') {
 	useJUnitPlatform()
